# coqide2-split

./: dune  dune-project
src/: dune
